[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
dotenv = "0.15.0"
lazy_static = "1.4.0"
chrono = "0.4.31"
pwhash = "1.0.0"
jsonwebtoken = "9.1.0"
serde = "1.0.136"
derive_more = "0.99.17"
serde_json = "1.0.108"
actix-web-validator = "5.0.1"
regex = "1.10.2"
futures-util = "0.3.29"
actix-web-httpauth = "0.8.1"
actix-multipart = "0.6.1"
futures = "0.3.29"
env_logger = "0.10.1"
log = "0.4.20"

[dependencies.mongodb]
  version = "2.2.0"
  default-features = false
  features = ["sync"] 

[dependencies.redis]
  version = "*"
